Update RFC integration for Service Desk + update Swagger docs
