# storage/api-docs/api-docs.json
@@ -1481,7 +1481,7 @@
                     "RFC"
                 ],
                 "summary": "Buat RFC baru (Service Desk / OPD)",
-                "description": "POST /api/v1/rfc\n\nNOTE:\n- Kalau body mengandung \"ticket_code\" → dianggap request dari aplikasi SERVICE DESK.\n- Kalau body mengandung \"ci_ids\" → dianggap request dari user OPD (flow lama + auto assessment).",
+                "description": "POST /api/v1/rfc\n\nNOTE:\n- Kalau body mengandung \"rfc_id\" → dianggap request dari aplikasi SERVICE DESK.\n- Kalau body mengandung \"ci_ids\" → dianggap request dari user OPD (flow lama + auto assessment).",
                 "operationId": "a499ce14e083680fe755781dce428af1",
                 "requestBody": {
                     "required": true,
@@ -1492,16 +1492,18 @@
                                     {
                                         "title": "Request dari Service Desk",
                                         "required": [
-                                            "ticket_code",
+                                            "rfc_id",
                                             "title",
                                             "description",
-                                            "priority"
+                                            "priority",
+                                            "request_at",
+                                            "asset_id"
                                         ],
                                         "properties": {
-                                            "ticket_code": {
-                                                "description": "Kode tiket dari aplikasi Service Desk",
+                                            "rfc_id": {
+                                                "description": "ID RFC dari aplikasi Service Desk",
                                                 "type": "string",
-                                                "example": "TKT-2025-0001"
+                                                "example": "RFC-2025-0001"
                                             },
                                             "title": {
                                                 "type": "string",
@@ -1509,7 +1511,7 @@
                                             },
                                             "description": {
                                                 "type": "string",
-                                                "example": "Diperlukan pembaruan modul pelaporan kinerja agar sesuai format terbaru BKN."
+                                                "example": "Diperlukan pembaruan modul pelaporan kinerja agar sesuai pedoman terbaru BKN."
                                             },
                                             "priority": {
                                                 "description": "Prioritas dari Service Desk",
@@ -1529,9 +1531,16 @@
                                                     "example": "https://api-sindra.co.id/storage/rfc/1.pdf"
                                                 }
                                             },
-                                            "technician_note": {
+                                            "request_at": {
+                                                "description": "Waktu request dibuat di aplikasi Service Desk",
                                                 "type": "string",
-                                                "example": "Format laporan lama tidak sesuai pedoman nasional."
+                                                "format": "date-time",
+                                                "example": "2025-11-20T10:45:00+07:00"
+                                            },
+                                            "asset_id": {
+                                                "description": "ID aset terdampak dari aplikasi Service Desk",
+                                                "type": "integer",
+                                                "example": 123
                                             }
                                         },
                                         "type": "object"
@@ -1620,7 +1629,7 @@
                                                         },
                                                         "ticket_code": {
                                                             "type": "string",
-                                                            "example": "TKT-2025-0001"
+                                                            "example": "RFC-2025-0001"
                                                         },
                                                         "title": {
                                                             "type": "string",
